--- a/openair/app/src/main/res/layout/custom_dialog_combo.xml
+++ b/openair/app/src/main/res/layout/custom_dialog_combo.xml
@@ -14,29 +14,54 @@
         android:id="@+id/dialogTitleCombo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="인원모집 글쓰기"
+        android:fontFamily="@font/ygotjalnanfont"
         android:gravity="center"
+        android:text="인원모집 글쓰기"
         android:textColor="#000"
         android:textSize="20dp"
         android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:fontFamily="@font/ygotjalnanfont"
+        android:text=" 총 모집 인원 수" />
 
     <EditText
         android:id="@+id/totalCombo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="1dp"
         android:ems="10"
-        android:hint="total"
+        android:fontFamily="@font/ygotjalnanfont"
         android:inputType="textPersonName" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:fontFamily="@font/ygotjalnanfont"
+        android:text=" 모집 인원 수" />
 
     <EditText
         android:id="@+id/recruitCombo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="1dp"
         android:ems="10"
-        android:hint="recruit"
+        android:fontFamily="@font/ygotjalnanfont"
         android:inputType="textPersonName" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:fontFamily="@font/ygotjalnanfont"
+        android:text=" 시간대 설정" />
 
     <Spinner
         android:id="@+id/spiner1Combo"
@@ -52,13 +77,21 @@
         android:layout_marginTop="20dp"
         android:entries="@array/time" />
 
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:fontFamily="@font/ygotjalnanfont"
+        android:text=" 모집 장소" />
+
     <EditText
         android:id="@+id/areaCombo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:ems="10"
-        android:hint="area"
+        android:fontFamily="@font/ygotjalnanfont"
         android:inputType="textPersonName" />
 
     <LinearLayout
@@ -73,19 +106,21 @@
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
             android:layout_weight="1"
-            android:text="취소"
             android:background="#EDF3FA"
+            android:fontFamily="@font/ygotjalnanfont"
+            android:text="취소"
             android:textColor="@color/ic_launcher_background" />
 
         <Button
             android:id="@+id/okButtonCombo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
             android:layout_weight="1"
-            android:text="입력완료"
             android:background="#EDF3FA"
+            android:fontFamily="@font/ygotjalnanfont"
+            android:text="입력완료"
             android:textColor="@color/ic_launcher_background" />
     </LinearLayout>
 
