--- a/openair/app/src/main/res/layout/recycler_view_row_my_reverse.xml
+++ b/openair/app/src/main/res/layout/recycler_view_row_my_reverse.xml
@@ -27,6 +27,7 @@
             android:layout_marginLeft="3dp"
             android:layout_marginRight="3dp"
             android:layout_weight="1"
+            android:fontFamily="@font/ygotjalnanfont"
             android:gravity="center"
             android:text="place_no" />
 
@@ -35,6 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:fontFamily="@font/ygotjalnanfont"
             android:gravity="center"
             android:text="date" />
 
@@ -43,6 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:fontFamily="@font/ygotjalnanfont"
             android:gravity="center"
             android:text="time" />
 
