--- a/openair/app/src/main/res/layout/recycler_view_row_recruit.xml
+++ b/openair/app/src/main/res/layout/recycler_view_row_recruit.xml
@@ -19,12 +19,13 @@
             android:id="@+id/tvcategory"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_weight="1.2"
+            android:background="#EDF3FA"
+            android:fontFamily="@font/ygotjalnanfont"
+            android:gravity="center"
             android:paddingLeft="5dp"
             android:paddingRight="5dp"
-            android:layout_weight="1.2"
-            android:gravity="center"
-            android:text="축구"
-            android:background="#EDF3FA" />
+            android:text="축구" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -36,9 +37,10 @@
                 android:id="@+id/tvtime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="4"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="5dp"
+                android:layout_weight="4"
+                android:fontFamily="@font/ygotjalnanfont"
                 android:gravity="center_vertical"
                 android:textSize="20sp"
                 tools:text="09:00 ~ 11:00" />
@@ -47,11 +49,12 @@
                 android:id="@+id/tvarea"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="6"
-                android:gravity="center_vertical"
                 android:layout_marginLeft="5dp"
-                android:textSize="14dp"
-                android:text="구미시 금오공과 대학교 대운동장" />
+                android:layout_weight="6"
+                android:fontFamily="@font/ygotjalnanfont"
+                android:gravity="center_vertical"
+                android:text="구미시 금오공과 대학교 대운동장"
+                android:textSize="14dp" />
         </LinearLayout>
 
         <LinearLayout
@@ -64,17 +67,19 @@
                 android:id="@+id/mine"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="right"
                 android:layout_marginRight="10dp"
-                android:textColor="@color/ic_launcher_background"
-                android:text="MY"/>
+                android:layout_weight="1"
+                android:fontFamily="@font/ygotjalnanfont"
+                android:gravity="right"
+                android:text="MY"
+                android:textColor="@color/ic_launcher_background" />
 
             <TextView
                 android:id="@+id/tvrecruit_num"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="9"
+                android:fontFamily="@font/ygotjalnanfont"
                 android:gravity="center"
                 android:text="7/8" />
 
@@ -84,6 +89,8 @@
                 android:layout_height="1dp"
                 android:layout_weight="1"
                 android:text="TextView" />
+
+
 
         </LinearLayout>
 
