--- a/openair/app/src/main/res/layout/recycler_view_row_write_recruit.xml
+++ b/openair/app/src/main/res/layout/recycler_view_row_write_recruit.xml
@@ -31,6 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:fontFamily="@font/ygotjalnanfont"
             android:gravity="center"
             android:text="category" />
 
@@ -41,6 +42,7 @@
             android:layout_marginLeft="3dp"
             android:layout_marginRight="3dp"
             android:layout_weight="1"
+            android:fontFamily="@font/ygotjalnanfont"
             android:gravity="center"
             android:text="place" />
 
@@ -49,6 +51,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:fontFamily="@font/ygotjalnanfont"
             android:gravity="center"
             android:text="date" />
 
@@ -57,6 +60,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:fontFamily="@font/ygotjalnanfont"
             android:gravity="center"
             android:text="time" />
 
@@ -65,6 +69,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:fontFamily="@font/ygotjalnanfont"
             android:gravity="center"
             android:text="totalnum" />
 
@@ -73,6 +78,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:fontFamily="@font/ygotjalnanfont"
             android:gravity="center"
             android:text="recruitnum" />
 
