--- a/openair/app/src/main/res/drawable/splash_background.xml
+++ b/openair/app/src/main/res/drawable/splash_background.xml
@@ -3,12 +3,12 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:drawable="@color/ic_launcher_background"/>
+        android:drawable="@color/colorSplash"/>
 
     <item>
         <bitmap
             android:gravity="center"
-            android:src="@drawable/logo_for_splash"/>
+            android:src="@drawable/newlogo_for_splash"/>
     </item>
 
 </layer-list>
