--- a/openair/app/src/main/res/layout/activity_reserve.xml
+++ b/openair/app/src/main/res/layout/activity_reserve.xml
@@ -12,7 +12,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/ic_launcher_background"
+        android:background="#f9f9f9"
         android:theme="@style/AlertDialog.AppCompat">
 
         <FrameLayout
@@ -21,10 +21,10 @@
             android:layout_gravity="center">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="200dp"
+                android:layout_height="40dp"
                 android:layout_gravity="center"
-                android:src="@drawable/logo" />
+                android:src="@drawable/newlogo" />
 
         </FrameLayout>
 
@@ -79,8 +79,7 @@
                 android:id="@+id/innumber"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="054-0000-0000"
-                android:textColor="#000088" />
+                android:text="054-0000-0000" />
 
             <TextView
                 android:id="@+id/comment4"
