--- a/openair/app/src/main/res/layout/activity_review.xml
+++ b/openair/app/src/main/res/layout/activity_review.xml
@@ -12,7 +12,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/ic_launcher_background"
+        android:background="#f9f9f9"
         android:theme="@style/AlertDialog.AppCompat">
 
         <FrameLayout
@@ -21,10 +21,10 @@
             android:layout_gravity="center">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="200dp"
+                android:layout_height="40dp"
                 android:layout_gravity="center"
-                android:src="@drawable/logo" />
+                android:src="@drawable/newlogo" />
 
         </FrameLayout>
 
@@ -33,8 +33,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#FCD9F3F7"
         android:orientation="horizontal"
-        android:background="#EDF3FA"
         android:paddingTop="5dp"
         android:paddingBottom="5dp">
 
@@ -43,21 +43,23 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:fontFamily="@font/ygotjalnanfont"
             android:gravity="right"
             android:text="리뷰"
             android:textSize="20dp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/ratingsum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_marginLeft="15dp"
+            android:layout_weight="1"
+            android:fontFamily="@font/ygotjalnanfont"
             android:gravity="left"
             android:text="평점 (non / 5)"
             android:textSize="15dp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
     </LinearLayout>
 
     <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
