--- a/openair/app/src/main/res/layout/activity_signup.xml
+++ b/openair/app/src/main/res/layout/activity_signup.xml
@@ -122,11 +122,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
+                android:background="#FCD9F3F7"
+                android:fontFamily="@font/ygotjalnanfont"
                 android:text="@string/action_sign_up"
-                android:textStyle="bold"
-                android:background="@color/ic_launcher_background"/>
-
-
+                android:textStyle="bold" />
 
         </LinearLayout>
     </ScrollView>
