--- a/openair/app/src/main/res/layout/activity_time_select.xml
+++ b/openair/app/src/main/res/layout/activity_time_select.xml
@@ -12,7 +12,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@color/ic_launcher_background"
+        android:background="#F9F9F9"
         android:theme="@style/AlertDialog.AppCompat">
 
         <FrameLayout
@@ -21,10 +21,10 @@
             android:layout_gravity="center">
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="200dp"
+                android:layout_height="40dp"
                 android:layout_gravity="center"
-                android:src="@drawable/logo" />
+                android:src="@drawable/newlogo" />
 
         </FrameLayout>
 
@@ -35,9 +35,11 @@
         android:id="@+id/textView16"
         android:layout_width="match_parent"
         android:layout_height="55dp"
+        android:fontFamily="@font/ygotjalnanfont"
         android:gravity="center"
         android:text="시간 선택"
-        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+        android:textSize="16sp" />
 
     <View
         android:layout_width="match_parent"
