--- a/openair/app/src/main/res/layout/custom_dialog.xml
+++ b/openair/app/src/main/res/layout/custom_dialog.xml
@@ -22,6 +22,7 @@
             android:layout_marginEnd="14dp"
             android:layout_marginRight="14dp"
             android:layout_marginBottom="14dp"
+            android:fontFamily="@font/ygotjalnanfont"
             android:gravity="center"
             android:text="리뷰 쓰기"
             android:textColor="#000"
@@ -34,8 +35,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/txt_dialog_title"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
+            android:layout_centerInParent="true"
+            android:foregroundTint="#FFEB30"
             android:isIndicator="false"
             android:max="5"
             android:numStars="5"
