--- a/openair/app/src/main/res/layout/fragment_menu1.xml
+++ b/openair/app/src/main/res/layout/fragment_menu1.xml
@@ -20,7 +20,7 @@
                     xmlns:tools="http://schemas.android.com/tools"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@color/colorWhite"
+                    android:background="#FFF"
                     tools:context=".MainActivity">
 
                     <LinearLayout
@@ -31,6 +31,7 @@
                         android:layout_centerInParent="true"
                         android:layout_marginBottom="10dp"
                         android:orientation="horizontal">
+
                         <Button
                             android:id="@+id/sbtn"
                             android:layout_width="25dp"
@@ -38,17 +39,18 @@
                             android:layout_marginTop="5dp"
                             android:layout_toLeftOf="@+id/region_text"
                             android:background="@drawable/outline_place_black_18dp" />
+
                         <TextView
                             android:id="@+id/location"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerVertical="true"
                             android:layout_marginTop="5dp"
+                            android:fontFamily="@font/ygotjalnanfont"
                             android:gravity="center"
                             android:text="위치 정보"
-                            android:textSize="16sp"
-                            android:fontFamily="@font/ygotjalnanfont"
-                            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                            android:textSize="16sp" />
 
                     </LinearLayout>
 
@@ -60,66 +62,77 @@
                     android:layout_width="match_parent"
                     android:layout_height="130dp"
                     android:orientation="horizontal" >
+
                     <ImageView
                         android:id="@+id/w_icon"
                         android:layout_width="110dp"
                         android:layout_height="match_parent"
-                        />
+                        android:background="#FCD9F3F7" />
+
                     <TextView
                         android:id="@+id/weather1"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:text="날씨 정보를 확인하고 있습니다..."
-                        android:textSize="12sp"
+                        android:layout_weight="1"
+                        android:background="#FCD9F3F7"
+                        android:fontFamily="@font/ygotjalnanfont"
                         android:gravity="center_vertical"
                         android:lineSpacingMultiplier="2.5"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/ygotjalnanfont"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+                        android:text="날씨 정보를 확인하고 있습니다..."
+                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                        android:textColor="#FF747474"
+                        android:textSize="12sp" />
+
                     <TextView
                         android:id="@+id/weather2"
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:text=""
-                        android:textSize="12sp"
+                        android:layout_weight="1"
+                        android:background="#FCD9F3F7"
+                        android:fontFamily="@font/ygotjalnanfont"
                         android:gravity="center_vertical"
                         android:lineSpacingMultiplier="2.5"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/ygotjalnanfont"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+                        android:text=""
+                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                        android:textColor="#FF747474"
+                        android:textSize="12sp" />
                 </LinearLayout>
 
                 <ImageView
                     android:id="@+id/imageView3"
                     android:layout_width="match_parent"
                     android:layout_height="224dp"
+                    android:background="#FCD9F3F7"
+                    android:scaleType="fitXY"
                     app:srcCompat="@drawable/nain_visual_01" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="실시간 미세먼지 정보"
-                    android:padding="10dp"
-                    android:textSize="16sp"
+                    android:background="#FFF"
                     android:fontFamily="@font/ygotjalnanfont"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:text="시간별 미세먼지 예보"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                    android:gravity="center"/>
+                    android:textSize="16sp" />
 
                 <android.support.v4.widget.NestedScrollView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:scrollbars="none" >
+                    android:background="#FCD9F3F7"
+                    android:scrollbars="none">
 
 
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical" >
+                        android:orientation="vertical">
 
                         <android.support.v7.widget.RecyclerView
                             android:id="@+id/tRecycler"
                             android:layout_width="match_parent"
-                            android:layout_height="match_parent"/>
+                            android:layout_height="match_parent" />
 
                     </LinearLayout>
                 </android.support.v4.widget.NestedScrollView>
@@ -128,17 +141,19 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="미세먼지 예보"
-                    android:padding="10dp"
-                    android:textSize="16sp"
+                    android:background="#FFF"
                     android:fontFamily="@font/ygotjalnanfont"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:text="일별 미세먼지 예보"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                    android:gravity="center"/>
+                    android:textSize="16sp" />
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/WeatherRecycler"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
+                    android:layout_height="match_parent"
+                    android:background="#FCD9F3F7" />
 
             </LinearLayout>
         </android.support.v4.widget.NestedScrollView>
