--- a/openair/app/src/main/res/layout/fragment_menu2.xml
+++ b/openair/app/src/main/res/layout/fragment_menu2.xml
@@ -7,14 +7,6 @@
     android:orientation="vertical">
 
 
-    <Button
-        android:id="@+id/ActivityCategoryButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#C6DCF0"
-        android:text="전체"
-        android:textColor="#FFF" />
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -25,13 +17,25 @@
             android:id="@+id/editText"
             android:layout_width="match_parent"
             android:layout_height="40dp"
-            android:background="@android:color/transparent"
+            android:background="#FFF"
             android:ems="10"
+            android:fontFamily="@font/ygotjalnanfont"
             android:gravity="center"
             android:hint="업체 정보 검색"
-            android:inputType="textPersonName" />
+            android:inputType="textPersonName"
+            android:textColorHint="#000" />
 
     </LinearLayout>
+
+    <Button
+        android:id="@+id/ActivityCategoryButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#FCD9F3F7"
+        android:fontFamily="@font/ygotjalnanfont"
+        android:text="카테고리 선택"
+        android:textColor="#909492"
+        android:textSize="20sp" />
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
