--- a/openair/app/src/main/res/layout/recycler_view_row_activity.xml
+++ b/openair/app/src/main/res/layout/recycler_view_row_activity.xml
@@ -37,21 +37,23 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:background="#EDF3FA"
+                android:fontFamily="@font/ygotjalnanfont"
+                android:gravity="center"
                 android:paddingTop="8dp"
                 android:paddingBottom="8dp"
-                android:gravity="center"
-                android:text="카테고리"
-                android:background="#EDF3FA" />
+                android:text="카테고리" />
 
             <TextView
                 android:id="@+id/ActivityName"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="9"
+                android:fontFamily="@font/ygotjalnanfont"
                 android:gravity="center"
                 android:text="풋살장a"
                 android:textSize="20dp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
         </LinearLayout>
 
         <View
@@ -69,6 +71,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="8.5"
+                android:fontFamily="@font/ygotjalnanfont"
                 android:gravity="center"
                 android:text="넓고 쾌적한 풋살장" />
 
@@ -77,6 +80,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:fontFamily="@font/ygotjalnanfont"
                 android:gravity="center|right"
                 android:text="평점 : " />
 
@@ -85,6 +89,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="0.5"
+                android:fontFamily="@font/ygotjalnanfont"
                 android:gravity="center|left"
                 android:text="4.5" />
         </LinearLayout>
@@ -98,13 +103,14 @@
             android:id="@+id/ActivityPrice"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/ygotjalnanfont"
             android:gravity="center"
             android:paddingTop="5dp"
             android:paddingBottom="5dp"
             android:text="30,000원"
+            android:textColor="#000"
             android:textSize="20dp"
-            android:textStyle="bold"
-            android:textColor="#f00" />
+            android:textStyle="bold" />
 
     </LinearLayout>
 </android.support.v7.widget.CardView>
