--- a/openair/app/src/main/res/layout/recycler_view_row_review.xml
+++ b/openair/app/src/main/res/layout/recycler_view_row_review.xml
@@ -26,10 +26,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:fontFamily="@font/ygotjalnanfont"
                 android:paddingLeft="5dp"
                 android:paddingRight="5dp"
-                android:textSize="15dp"
-                android:text="닉네임" />
+                android:text="닉네임"
+                android:textSize="15dp" />
 
 
             <RatingBar
