--- a/openair/app/src/main/res/layout/recycler_view_row_weather.xml
+++ b/openair/app/src/main/res/layout/recycler_view_row_weather.xml
@@ -19,6 +19,8 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:background="#FCD9F3F7"
+            android:fontFamily="@font/ygotjalnanfont"
             android:gravity="center|left"
             android:text="date" />
 
@@ -27,6 +29,8 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:background="#FCD9F3F7"
+            android:fontFamily="@font/ygotjalnanfont"
             android:gravity="center|left"
             android:text="time" />
 
@@ -40,6 +44,8 @@
                 android:id="@+id/textView8"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="#FCD9F3F7"
+                android:fontFamily="@font/ygotjalnanfont"
                 android:gravity="center"
                 android:text="PM10" />
 
@@ -54,6 +60,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="3"
                     android:adjustViewBounds="true"
+                    android:background="#FCD9F3F7"
                     android:padding="16dp"
                     android:scaleType="fitXY" />
 
@@ -62,8 +69,11 @@
                     android:layout_width="22dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:background="#FCD9F3F7"
+                    android:fontFamily="@font/ygotjalnanfont"
                     android:gravity="center"
-                    android:text="좋음" />
+                    android:text="좋음"
+                    android:textSize="12sp" />
             </LinearLayout>
         </LinearLayout>
 
@@ -77,6 +87,8 @@
                 android:id="@+id/textView10"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="#FCD9F3F7"
+                android:fontFamily="@font/ygotjalnanfont"
                 android:gravity="center"
                 android:text="PM25" />
 
@@ -91,6 +103,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="3"
                     android:adjustViewBounds="true"
+                    android:background="#FCD9F3F7"
                     android:padding="16dp"
                     android:scaleType="fitXY" />
 
@@ -99,8 +112,11 @@
                     android:layout_width="22dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:background="#FCD9F3F7"
+                    android:fontFamily="@font/ygotjalnanfont"
                     android:gravity="center"
-                    android:text="나쁨" />
+                    android:text="나쁨"
+                    android:textSize="12sp" />
             </LinearLayout>
         </LinearLayout>
 
